Archive2/40/e9508fb1f9475b/output
main.cpp:4:11: error: '::main' must return 'int'
 void main()
           ^
main.cpp: In function 'int main()':
main.cpp:9:40: warning: format '%c' expects a matching 'int' argument [-Wformat=]
 printf("%30c:" "--------------------\n");
                                        ^
main.cpp:10:39: warning: format '%c' expects a matching 'int' argument [-Wformat=]
 printf("%29c | Calculate The Area |\n");
                                       ^
main.cpp:11:37: warning: format '%c' expects a matching 'int' argument [-Wformat=]
 printf("%30c --------------------\n");
                                     ^
main.cpp:12:47: warning: format '%c' expects a matching 'int' argument [-Wformat=]
 printf("%25c Please Choice Calculate Area\n\n");
                                               ^
main.cpp:14:74: warning: format '%c' expects a matching 'int' argument [-Wformat=]
 printf("%10c 1 : Triangle 2 : Square 3 : Circle 4 : Trapezoid 5 : Exit\n");
                                                                          ^
main.cpp:21:40: warning: format '%c' expects a matching 'int' argument [-Wformat=]
     case 1: printf("%25c1 : Triangle\n");
                                        ^
main.cpp:22:39: warning: format '%c' expects a matching 'int' argument [-Wformat=]
      printf("%25cPlease Input Base : ");
                                       ^
main.cpp:24:38: warning: format '%c' expects a matching 'int' argument [-Wformat=]
   printf("%25cPlease Input Height : ");
                                      ^
main.cpp:29:35: warning: format '%c' expects a matching 'int' argument [-Wformat=]
  case 2: printf("%25c2 : Square\n");
                                   ^
main.cpp:30:36: warning: format '%c' expects a matching 'int' argument [-Wformat=]
   printf("%25cPlease Input Wide : ");
                                    ^
main.cpp:32:38: warning: format '%c' expects a matching 'int' argument [-Wformat=]
   printf("%25cPlease Input length : ");
                                      ^
main.cpp:37:34: warning: format '%c' expects a matching 'int' argument [-Wformat=]
  case 3:printf("%25c3 : Circle\n");
                                  ^
main.cpp:38:33: warning: format '%c' expects a matching 'int' argument [-Wformat=]
   printf("%25cPlease Input R : ");
                                 ^
main.cpp:45:37: warning: format '%c' expects a matching 'int' argument [-Wformat=]
  case 4:printf("%25c4 : Trapezoid\n");
                                     ^
main.cpp:46:39: warning: format '%c' expects a matching 'int' argument [-Wformat=]
   printf("%25cPlease Input longtop : ");
                                       ^
main.cpp:48:41: warning: format '%c' expects a matching 'int' argument [-Wformat=]
   printf("%25cPlease Input longlower : ");
                                         ^
main.cpp:50:38: warning: format '%c' expects a matching 'int' argument [-Wformat=]
   printf("%25cPlease Input Height : ");
                                      ^
main.cpp:55:29: warning: format '%c' expects a matching 'int' argument [-Wformat=]
  case 5: printf("%25c THANK");
                             ^
main.cpp:18:20: warning: ignoring return value of 'int scanf(const char*, ...)', declared with attribute warn_unused_result [-Wunused-result]
 scanf("%d",&choice);
                    ^
main.cpp:23:20: warning: ignoring return value of 'int scanf(const char*, ...)', declared with attribute warn_unused_result [-Wunused-result]
   scanf("%f",&base);
                    ^
main.cpp:25:22: warning: ignoring return value of 'int scanf(const char*, ...)', declared with attribute warn_unused_result [-Wunused-result]
   scanf("%f",&height);
                      ^
main.cpp:31:20: warning: ignoring return value of 'int scanf(const char*, ...)', declared with attribute warn_unused_result [-Wunused-result]
   scanf("%f",&wide);
                    ^
main.cpp:33:22: warning: ignoring return value of 'int scanf(const char*, ...)', declared with attribute warn_unused_result [-Wunused-result]
   scanf("%f",&length);
                      ^
main.cpp:39:17: warning: ignoring return value of 'int scanf(const char*, ...)', declared with attribute warn_unused_result [-Wunused-result]
   scanf("%f",&r);
                 ^
main.cpp:47:23: warning: ignoring return value of 'int scanf(const char*, ...)', declared with attribute warn_unused_result [-Wunused-result]
   scanf("%f",&longtop);
                       ^
main.cpp:49:25: warning: ignoring return value of 'int scanf(const char*, ...)', declared with attribute warn_unused_result [-Wunused-result]
   scanf("%f",&longlower);
                         ^
main.cpp:51:22: warning: ignoring return value of 'int scanf(const char*, ...)', declared with attribute warn_unused_result [-Wunused-result]
   scanf("%f",&height);
                      ^
